Version 6.1.3
- Allowed -I directives in .fpide files
- Fixed incorrect macro definitions in .fpide files
- Fixed a number of places where incorrect line numbers were used for errors

Version 6.1.2
- Added files included by FILE directive to .zip files
- Fixed an optimizer bug around the P1 PHSx registers
- Fixed incorrect constant optimization of inline assembly (caught by Ada Gottensträter)
- Fixed some missing optimizations when -l was enabled
- Fixed incorrect assembly output for files not ending in newline when -l is on
- Fixed final value of loop variables after loop is transformed to djnz
- Fixed PTRx offsetting in C inline asm
- Fixed bugs in ELSE conditional assembly parsing.
- Implemented __builtin_expect (thanks, Ada!)
- Several additional optimizations contributed by Ada
- Skip symbol resolution when outputting .o files, fixes some output bugs
- Made object constant override expressions be evaluated in the parent object
- Minor optimization for expressions like 2*x

Version 6.1.1
- Added special -D_XTLFREQ=x and -D_XINFREQ=x command line defines
- Fixed IF in assembly debug
- Fixed constant SIGNX evaluation
- Made the preprocessor ignore characters after a line comment start (like ')
- Made jmp relative calculations act more like the official compiler
- Use proper full name for C include files in zip creation
- Remove .zip file on failed creation

Version 6.1.0
- Added basic support for compiling project files (.fpide or .side)
- Implemented ^@ and FIELD[] for Spin2
- Implemented conditional assembly instructions if, elseif, else, and endif
- Merged Ada's improved strlen() function
- Merged some register allocation improvements from Ada
- Provide syntax for C `struct using` to override constants in Spin2 objects

Version 6.0.5
- Fixed an optimizer bug with inlined functions
- Fixed a spurious "use before set" warning in sizeof()
- Improved the error message for try blocks in bytecode output

Version 6.0.4