@@ -23,25 +23,25 @@ _fetchv
 	mov	arg02, arg01
 	cmps	arg01, fetchv_tmp002_ wc
  if_ae	jmp	#LR__0002
-	mov	_inline_00014__inline_00000___system____builtin_memmove__idx__0000, #20 wz
+	mov	_inline__inline___system____builtin_memmove__idx__0000, #20 wz
 LR__0001
 	rdbyte	result1, fetchv_tmp002_
 	wrbyte	result1, arg01
 	add	arg01, #1
 	add	fetchv_tmp002_, #1
-	djnz	_inline_00014__inline_00000___system____builtin_memmove__idx__0000, #LR__0001
+	djnz	_inline__inline___system____builtin_memmove__idx__0000, #LR__0001
 	jmp	#LR__0005
 LR__0002
 	add	arg01, arg03
 	add	fetchv_tmp002_, arg03
-	mov	_inline_00014__inline_00000___system____builtin_memmove__idx__0001, arg03 wz
+	mov	_inline__inline___system____builtin_memmove__idx__0001, arg03 wz
  if_e	jmp	#LR__0004
 LR__0003
 	sub	arg01, #1
 	sub	fetchv_tmp002_, #1
-	rdbyte	_inline_00014__inline_00000___system____builtin_memmove__idx__0000, fetchv_tmp002_
-	wrbyte	_inline_00014__inline_00000___system____builtin_memmove__idx__0000, arg01
-	djnz	_inline_00014__inline_00000___system____builtin_memmove__idx__0001, #LR__0003
+	rdbyte	_inline__inline___system____builtin_memmove__idx__0000, fetchv_tmp002_
+	wrbyte	_inline__inline___system____builtin_memmove__idx__0000, arg01
+	djnz	_inline__inline___system____builtin_memmove__idx__0001, #LR__0003
 LR__0004
 LR__0005
 	add	arg02, #12
@@ -252,33 +252,33 @@ __system___gc_doalloc
 	cogid	result1
 	add	result1, #256
 LR__0030
-	rdlong	_inline_00006___system___lockmem_r, arg01 wz
+	rdlong	_inline___system___lockmem_r, arg01 wz
  if_e	wrlong	result1, arg01
- if_e	rdlong	_inline_00006___system___lockmem_r, arg01
- if_e	rdlong	_inline_00006___system___lockmem_r, arg01
-	cmp	_inline_00006___system___lockmem_r, result1 wz
+ if_e	rdlong	_inline___system___lockmem_r, arg01
+ if_e	rdlong	_inline___system___lockmem_r, arg01
+	cmp	_inline___system___lockmem_r, result1 wz
  if_ne	jmp	#LR__0030
 	mov	arg01, __system___gc_doalloc_size
 	mov	arg02, __system___gc_doalloc_reserveflag
 	call	#__system___gc_tryalloc
-	mov	_inline_00006___system___lockmem_r, result1 wz
+	mov	_inline___system___lockmem_r, result1 wz
  if_ne	jmp	#LR__0031
 	call	#__system___gc_docollect
 	mov	arg01, __system___gc_doalloc_size
 	mov	arg02, __system___gc_doalloc_reserveflag
 	call	#__system___gc_tryalloc
-	mov	_inline_00006___system___lockmem_r, result1
+	mov	_inline___system___lockmem_r, result1
 LR__0031
 	mov	__system___gc_doalloc_reserveflag, #0
 	wrlong	__system___gc_doalloc_reserveflag, __system___gc_doalloc__cse__0005
-	cmp	_inline_00006___system___lockmem_r, #0 wz
+	cmp	_inline___system___lockmem_r, #0 wz
  if_e	jmp	#LR__0034
 	shl	__system___gc_doalloc_size, #4
 	sub	__system___gc_doalloc_size, #8
 	abs	_system___gc_doalloc_tmp001_, __system___gc_doalloc_size wc
 	shr	_system___gc_doalloc_tmp001_, #2
 	negc	__system___gc_doalloc__idx__0000, _system___gc_doalloc_tmp001_ wz
-	mov	__system___gc_doalloc_zptr, _inline_00006___system___lockmem_r
+	mov	__system___gc_doalloc_zptr, _inline___system___lockmem_r
  if_e	jmp	#LR__0033
 LR__0032
 	mov	_system___gc_doalloc_tmp001_, #0
@@ -287,7 +287,7 @@ LR__0032
 	djnz	__system___gc_doalloc__idx__0000, #LR__0032
 LR__0033
 LR__0034
-	mov	result1, _inline_00006___system___lockmem_r
+	mov	result1, _inline___system___lockmem_r
 __system___gc_doalloc_ret
 	ret
 
@@ -349,52 +349,52 @@ LR__0051
 	call	#__system____topofstack
 	mov	arg02, result1
 	mov	arg01, #0
-	mov	_inline_00009___system___gc_markhub_startaddr, #0
-	mov	_inline_00009___system___gc_markhub_endaddr, arg02
+	mov	_inline___system___gc_markhub_startaddr, #0
+	mov	_inline___system___gc_markhub_endaddr, arg02
 	call	#__system___gc_ptrs
-	mov	_inline_00009___system___gc_markhub_heap_base, result1
-	mov	_inline_00009___system___gc_markhub_heap_end, result2
+	mov	_inline___system___gc_markhub_heap_base, result1
+	mov	_inline___system___gc_markhub_heap_end, result2
 LR__0052
-	cmps	_inline_00009___system___gc_markhub_startaddr, _inline_00009___system___gc_markhub_endaddr wc
+	cmps	_inline___system___gc_markhub_startaddr, _inline___system___gc_markhub_endaddr wc
  if_ae	jmp	#LR__0053
-	rdlong	arg03, _inline_00009___system___gc_markhub_startaddr
-	add	_inline_00009___system___gc_markhub_startaddr, #4
-	mov	arg02, _inline_00009___system___gc_markhub_heap_end
-	mov	arg01, _inline_00009___system___gc_markhub_heap_base
+	rdlong	arg03, _inline___system___gc_markhub_startaddr
+	add	_inline___system___gc_markhub_startaddr, #4
+	mov	arg02, _inline___system___gc_markhub_heap_end
+	mov	arg01, _inline___system___gc_markhub_heap_base
 	call	#__system___gc_isvalidptr
-	mov	_inline_00009___system___gc_markhub_ptr, result1 wz
+	mov	_inline___system___gc_markhub_ptr, result1 wz
  if_e	jmp	#LR__0052
-	mov	arg01, _inline_00009___system___gc_markhub_ptr
+	mov	arg01, _inline___system___gc_markhub_ptr
 	call	#__system___gc_isFree
 	cmp	result1, #0 wz
- if_e	add	_inline_00009___system___gc_markhub_ptr, #2
- if_e	rdword	_inline_00009___system___gc_markhub_flags, _inline_00009___system___gc_markhub_ptr
- if_e	andn	_inline_00009___system___gc_markhub_flags, #15
- if_e	or	_inline_00009___system___gc_markhub_flags, #46
- if_e	wrword	_inline_00009___system___gc_markhub_flags, _inline_00009___system___gc_markhub_ptr
+ if_e	add	_inline___system___gc_markhub_ptr, #2
+ if_e	rdword	_inline___system___gc_markhub_flags, _inline___system___gc_markhub_ptr
+ if_e	andn	_inline___system___gc_markhub_flags, #15
+ if_e	or	_inline___system___gc_markhub_flags, #46
+ if_e	wrword	_inline___system___gc_markhub_flags, _inline___system___gc_markhub_ptr
 	jmp	#LR__0052
 LR__0053
 	call	#__system___gc_ptrs
-	mov	_inline_00010___system___gc_markcog_heap_base, result1
-	mov	_inline_00010___system___gc_markcog_heap_end, result2
-	mov	_inline_00010___system___gc_markcog_cogaddr, #495
+	mov	_inline___system___gc_markcog_heap_base, result1
+	mov	_inline___system___gc_markcog_heap_end, result2
+	mov	_inline___system___gc_markcog_cogaddr, #495
 LR__0054
-	'.live	_inline_00010___system___gc_markcog_ptr
-	movs	wrcog, _inline_00010___system___gc_markcog_cogaddr
+	'.live	_inline___system___gc_markcog_ptr
+	movs	wrcog, _inline___system___gc_markcog_cogaddr
 	movd	wrcog, #__system___gc_markcog_ptr
 	call	#wrcog
-	mov	arg02, _inline_00010___system___gc_markcog_heap_end
-	mov	arg01, _inline_00010___system___gc_markcog_heap_base
-	mov	arg03, _inline_00010___system___gc_markcog_ptr
+	mov	arg02, _inline___system___gc_markcog_heap_end
+	mov	arg01, _inline___system___gc_markcog_heap_base
+	mov	arg03, _inline___system___gc_markcog_ptr
 	call	#__system___gc_isvalidptr
-	mov	_inline_00010___system___gc_markcog_ptr, result1 wz
- if_ne	mov	_inline_00010___system___gc_markcog__cse__0000, _inline_00010___system___gc_markcog_ptr
- if_ne	add	_inline_00010___system___gc_markcog__cse__0000, #2
- if_ne	rdword	_inline_00010___system___gc_markcog__cse__0001, _inline_00010___system___gc_markcog__cse__0000
- if_ne	or	_inline_00010___system___gc_markcog__cse__0001, #32
- if_ne	wrword	_inline_00010___system___gc_markcog__cse__0001, _inline_00010___system___gc_markcog__cse__0000
-	sub	_inline_00010___system___gc_markcog_cogaddr, #1
-	cmps	_inline_00010___system___gc_markcog_cogaddr, #0 wc
+	mov	_inline___system___gc_markcog_ptr, result1 wz
+ if_ne	mov	_inline___system___gc_markcog__cse__0000, _inline___system___gc_markcog_ptr
+ if_ne	add	_inline___system___gc_markcog__cse__0000, #2
+ if_ne	rdword	_inline___system___gc_markcog__cse__0001, _inline___system___gc_markcog__cse__0000
+ if_ne	or	_inline___system___gc_markcog__cse__0001, #32
+ if_ne	wrword	_inline___system___gc_markcog__cse__0001, _inline___system___gc_markcog__cse__0000
+	sub	_inline___system___gc_markcog_cogaddr, #1
+	cmps	_inline___system___gc_markcog_cogaddr, #0 wc
  if_ae	jmp	#LR__0054
 	mov	arg01, __system___gc_docollect_startheap
 	call	#__system___gc_nextBlockPtr
@@ -416,115 +416,115 @@ LR__0055
  if_ne	cmp	__system___gc_docollect_startheap, #14 wz
  if_ne	jmp	#LR__0063
 	mov	arg01, __system___gc_docollect_ptr
-	mov	_inline_00012___system___gc_dofree_ptr, arg01
+	mov	_inline___system___gc_dofree_ptr, arg01
 	call	#__system___gc_ptrs
-	mov	_inline_00012___system___gc_dofree_heapend, result2
-	mov	_inline_00012___system___gc_dofree_heapbase, result1
-	mov	_inline_00012___system___gc_dofree__cse__0000, _inline_00012___system___gc_dofree_ptr
-	add	_inline_00012___system___gc_dofree__cse__0000, #2
+	mov	_inline___system___gc_dofree_heapend, result2
+	mov	_inline___system___gc_dofree_heapbase, result1
+	mov	_inline___system___gc_dofree__cse__0000, _inline___system___gc_dofree_ptr
+	add	_inline___system___gc_dofree__cse__0000, #2
 	mov	result1, imm_27791_
-	wrword	result1, _inline_00012___system___gc_dofree__cse__0000
-	mov	_inline_00012___system___gc_dofree_prevptr, _inline_00012___system___gc_dofree_ptr
-	mov	arg01, _inline_00012___system___gc_dofree_ptr
+	wrword	result1, _inline___system___gc_dofree__cse__0000
+	mov	_inline___system___gc_dofree_prevptr, _inline___system___gc_dofree_ptr
+	mov	arg01, _inline___system___gc_dofree_ptr
 	call	#__system___gc_nextBlockPtr
-	mov	_inline_00012___system___gc_dofree_nextptr, result1
+	mov	_inline___system___gc_dofree_nextptr, result1
 LR__0056
-	add	_inline_00012___system___gc_dofree_prevptr, #4
-	rdword	arg02, _inline_00012___system___gc_dofree_prevptr
-	mov	arg01, _inline_00012___system___gc_dofree_heapbase
+	add	_inline___system___gc_dofree_prevptr, #4
+	rdword	arg02, _inline___system___gc_dofree_prevptr
+	mov	arg01, _inline___system___gc_dofree_heapbase
 	call	#__system___gc_pageptr
-	mov	_inline_00012___system___gc_dofree_prevptr, result1 wz
+	mov	_inline___system___gc_dofree_prevptr, result1 wz
  if_e	jmp	#LR__0057
-	mov	arg01, _inline_00012___system___gc_dofree_prevptr
+	mov	arg01, _inline___system___gc_dofree_prevptr
 	call	#__system___gc_isFree
 	cmp	result1, #0 wz
  if_e	jmp	#LR__0056
 LR__0057
-	cmp	_inline_00012___system___gc_dofree_prevptr, #0 wz
- if_e	mov	_inline_00012___system___gc_dofree_prevptr, _inline_00012___system___gc_dofree_heapbase
-	mov	_inline_00012___system___gc_dofree__cse__0002, _inline_00012___system___gc_dofree_prevptr
-	add	_inline_00012___system___gc_dofree__cse__0002, #6
-	mov	_inline_00012___system___gc_dofree__cse__0003, _inline_00012___system___gc_dofree_ptr
-	rdword	arg02, _inline_00012___system___gc_dofree__cse__0002
-	add	_inline_00012___system___gc_dofree__cse__0003, #6
-	wrword	arg02, _inline_00012___system___gc_dofree__cse__0003
-	mov	arg01, _inline_00012___system___gc_dofree_heapbase
-	mov	arg02, _inline_00012___system___gc_dofree_ptr
+	cmp	_inline___system___gc_dofree_prevptr, #0 wz
+ if_e	mov	_inline___system___gc_dofree_prevptr, _inline___system___gc_dofree_heapbase
+	mov	_inline___system___gc_dofree__cse__0002, _inline___system___gc_dofree_prevptr
+	add	_inline___system___gc_dofree__cse__0002, #6
+	mov	_inline___system___gc_dofree__cse__0003, _inline___system___gc_dofree_ptr
+	rdword	arg02, _inline___system___gc_dofree__cse__0002
+	add	_inline___system___gc_dofree__cse__0003, #6
+	wrword	arg02, _inline___system___gc_dofree__cse__0003
+	mov	arg01, _inline___system___gc_dofree_heapbase
+	mov	arg02, _inline___system___gc_dofree_ptr
 	call	#__system___gc_pageindex
-	wrword	result1, _inline_00012___system___gc_dofree__cse__0002
-	cmp	_inline_00012___system___gc_dofree_prevptr, _inline_00012___system___gc_dofree_heapbase wz
+	wrword	result1, _inline___system___gc_dofree__cse__0002
+	cmp	_inline___system___gc_dofree_prevptr, _inline___system___gc_dofree_heapbase wz
  if_e	jmp	#LR__0060
-	mov	arg01, _inline_00012___system___gc_dofree_prevptr
+	mov	arg01, _inline___system___gc_dofree_prevptr
 	call	#__system___gc_nextBlockPtr
-	cmp	result1, _inline_00012___system___gc_dofree_ptr wz
+	cmp	result1, _inline___system___gc_dofree_ptr wz
  if_ne	jmp	#LR__0059
-	rdword	arg01, _inline_00012___system___gc_dofree_prevptr
-	rdword	result1, _inline_00012___system___gc_dofree_ptr
+	rdword	arg01, _inline___system___gc_dofree_prevptr
+	rdword	result1, _inline___system___gc_dofree_ptr
 	add	arg01, result1
-	wrword	arg01, _inline_00012___system___gc_dofree_prevptr
-	mov	_inline_00012___system___gc_dofree_nextptr, #0
-	wrword	_inline_00012___system___gc_dofree_nextptr, _inline_00012___system___gc_dofree__cse__0000
-	mov	arg01, _inline_00012___system___gc_dofree_ptr
+	wrword	arg01, _inline___system___gc_dofree_prevptr
+	mov	_inline___system___gc_dofree_nextptr, #0
+	wrword	_inline___system___gc_dofree_nextptr, _inline___system___gc_dofree__cse__0000
+	mov	arg01, _inline___system___gc_dofree_ptr
 	call	#__system___gc_nextBlockPtr
-	mov	_inline_00012___system___gc_dofree_nextptr, result1
-	cmps	_inline_00012___system___gc_dofree_nextptr, _inline_00012___system___gc_dofree_heapend wc
+	mov	_inline___system___gc_dofree_nextptr, result1
+	cmps	_inline___system___gc_dofree_nextptr, _inline___system___gc_dofree_heapend wc
  if_ae	jmp	#LR__0058
-	mov	_inline_00012___system___gc_dofree__cse__0000, _inline_00012___system___gc_dofree_nextptr
-	add	_inline_00012___system___gc_dofree__cse__0000, #4
-	mov	arg01, _inline_00012___system___gc_dofree_heapbase
-	mov	arg02, _inline_00012___system___gc_dofree_prevptr
+	mov	_inline___system___gc_dofree__cse__0000, _inline___system___gc_dofree_nextptr
+	add	_inline___system___gc_dofree__cse__0000, #4
+	mov	arg01, _inline___system___gc_dofree_heapbase
+	mov	arg02, _inline___system___gc_dofree_prevptr
 	call	#__system___gc_pageindex
-	wrword	result1, _inline_00012___system___gc_dofree__cse__0000
+	wrword	result1, _inline___system___gc_dofree__cse__0000
 LR__0058
-	rdword	_inline_00012___system___gc_dofree__cse__0000, _inline_00012___system___gc_dofree__cse__0003
-	wrword	_inline_00012___system___gc_dofree__cse__0000, _inline_00012___system___gc_dofree__cse__0002
-	mov	_inline_00012___system___gc_dofree__cse__0002, #0
-	wrword	_inline_00012___system___gc_dofree__cse__0002, _inline_00012___system___gc_dofree__cse__0003
-	mov	_inline_00012___system___gc_dofree_ptr, _inline_00012___system___gc_dofree_prevptr
+	rdword	_inline___system___gc_dofree__cse__0000, _inline___system___gc_dofree__cse__0003
+	wrword	_inline___system___gc_dofree__cse__0000, _inline___system___gc_dofree__cse__0002
+	mov	_inline___system___gc_dofree__cse__0002, #0
+	wrword	_inline___system___gc_dofree__cse__0002, _inline___system___gc_dofree__cse__0003
+	mov	_inline___system___gc_dofree_ptr, _inline___system___gc_dofree_prevptr
 LR__0059
 LR__0060
-	mov	arg01, _inline_00012___system___gc_dofree_ptr
+	mov	arg01, _inline___system___gc_dofree_ptr
 	call	#__system___gc_nextBlockPtr
-	mov	_inline_00012___system___gc_dofree__cse__0003, result1 wz
+	mov	_inline___system___gc_dofree__cse__0003, result1 wz
  if_e	jmp	#LR__0062
-	cmps	_inline_00012___system___gc_dofree__cse__0003, _inline_00012___system___gc_dofree_heapend wc
+	cmps	_inline___system___gc_dofree__cse__0003, _inline___system___gc_dofree_heapend wc
  if_ae	jmp	#LR__0062
-	mov	arg01, _inline_00012___system___gc_dofree__cse__0003
+	mov	arg01, _inline___system___gc_dofree__cse__0003
 	call	#__system___gc_isFree
 	cmp	result1, #0 wz
  if_e	jmp	#LR__0062
-	mov	_inline_00012___system___gc_dofree_prevptr, _inline_00012___system___gc_dofree_ptr
-	rdword	_inline_00012___system___gc_dofree__cse__0002, _inline_00012___system___gc_dofree_prevptr
-	mov	arg01, _inline_00012___system___gc_dofree__cse__0003
-	rdword	_inline_00012___system___gc_dofree__cse__0003, arg01
-	add	_inline_00012___system___gc_dofree__cse__0002, _inline_00012___system___gc_dofree__cse__0003
-	wrword	_inline_00012___system___gc_dofree__cse__0002, _inline_00012___system___gc_dofree_prevptr
-	mov	_inline_00012___system___gc_dofree_nextptr, arg01
-	add	_inline_00012___system___gc_dofree_nextptr, #6
-	mov	_inline_00012___system___gc_dofree__cse__0003, _inline_00012___system___gc_dofree_prevptr
-	rdword	_inline_00012___system___gc_dofree__cse__0002, _inline_00012___system___gc_dofree_nextptr
-	add	_inline_00012___system___gc_dofree__cse__0003, #6
-	wrword	_inline_00012___system___gc_dofree__cse__0002, _inline_00012___system___gc_dofree__cse__0003
-	mov	_inline_00012___system___gc_dofree__cse__0002, arg01
-	add	_inline_00012___system___gc_dofree__cse__0002, #2
-	mov	_inline_00012___system___gc_dofree__cse__0003, #170
-	wrword	_inline_00012___system___gc_dofree__cse__0003, _inline_00012___system___gc_dofree__cse__0002
-	mov	_inline_00012___system___gc_dofree__cse__0003, #0
-	wrword	_inline_00012___system___gc_dofree__cse__0003, _inline_00012___system___gc_dofree_nextptr
+	mov	_inline___system___gc_dofree_prevptr, _inline___system___gc_dofree_ptr
+	rdword	_inline___system___gc_dofree__cse__0002, _inline___system___gc_dofree_prevptr
+	mov	arg01, _inline___system___gc_dofree__cse__0003
+	rdword	_inline___system___gc_dofree__cse__0003, arg01
+	add	_inline___system___gc_dofree__cse__0002, _inline___system___gc_dofree__cse__0003
+	wrword	_inline___system___gc_dofree__cse__0002, _inline___system___gc_dofree_prevptr
+	mov	_inline___system___gc_dofree_nextptr, arg01
+	add	_inline___system___gc_dofree_nextptr, #6
+	mov	_inline___system___gc_dofree__cse__0003, _inline___system___gc_dofree_prevptr
+	rdword	_inline___system___gc_dofree__cse__0002, _inline___system___gc_dofree_nextptr
+	add	_inline___system___gc_dofree__cse__0003, #6
+	wrword	_inline___system___gc_dofree__cse__0002, _inline___system___gc_dofree__cse__0003
+	mov	_inline___system___gc_dofree__cse__0002, arg01
+	add	_inline___system___gc_dofree__cse__0002, #2
+	mov	_inline___system___gc_dofree__cse__0003, #170
+	wrword	_inline___system___gc_dofree__cse__0003, _inline___system___gc_dofree__cse__0002
+	mov	_inline___system___gc_dofree__cse__0003, #0
+	wrword	_inline___system___gc_dofree__cse__0003, _inline___system___gc_dofree_nextptr
 	call	#__system___gc_nextBlockPtr
-	mov	_inline_00012___system___gc_dofree_nextptr, result1 wz
+	mov	_inline___system___gc_dofree_nextptr, result1 wz
  if_e	jmp	#LR__0061
-	cmps	_inline_00012___system___gc_dofree_nextptr, _inline_00012___system___gc_dofree_heapend wc
+	cmps	_inline___system___gc_dofree_nextptr, _inline___system___gc_dofree_heapend wc
  if_ae	jmp	#LR__0061
-	mov	_inline_00012___system___gc_dofree__cse__0003, _inline_00012___system___gc_dofree_nextptr
-	add	_inline_00012___system___gc_dofree__cse__0003, #4
-	mov	arg01, _inline_00012___system___gc_dofree_heapbase
-	mov	arg02, _inline_00012___system___gc_dofree_prevptr
+	mov	_inline___system___gc_dofree__cse__0003, _inline___system___gc_dofree_nextptr
+	add	_inline___system___gc_dofree__cse__0003, #4
+	mov	arg01, _inline___system___gc_dofree_heapbase
+	mov	arg02, _inline___system___gc_dofree_prevptr
 	call	#__system___gc_pageindex
-	wrword	result1, _inline_00012___system___gc_dofree__cse__0003
+	wrword	result1, _inline___system___gc_dofree__cse__0003
 LR__0061
 LR__0062
-	mov	__system___gc_docollect__cse__0001, _inline_00012___system___gc_dofree_nextptr
+	mov	__system___gc_docollect__cse__0001, _inline___system___gc_dofree_nextptr
 LR__0063
 LR__0064
 	cmp	__system___gc_docollect__cse__0001, #0 wz
@@ -638,51 +638,51 @@ __system___gc_tryalloc_saveptr
 	res	1
 __system___gc_tryalloc_size
 	res	1
-_inline_00006___system___lockmem_r
+_inline___system___gc_dofree__cse__0000
 	res	1
-_inline_00009___system___gc_markhub_endaddr
+_inline___system___gc_dofree__cse__0002
 	res	1
-_inline_00009___system___gc_markhub_flags
+_inline___system___gc_dofree__cse__0003
 	res	1
-_inline_00009___system___gc_markhub_heap_base
+_inline___system___gc_dofree_heapbase
 	res	1
-_inline_00009___system___gc_markhub_heap_end
+_inline___system___gc_dofree_heapend
 	res	1
-_inline_00009___system___gc_markhub_ptr
+_inline___system___gc_dofree_nextptr
 	res	1
-_inline_00009___system___gc_markhub_startaddr
+_inline___system___gc_dofree_prevptr
 	res	1
-_inline_00010___system___gc_markcog__cse__0000
+_inline___system___gc_dofree_ptr
 	res	1
-_inline_00010___system___gc_markcog__cse__0001
+_inline___system___gc_markcog__cse__0000
 	res	1
-_inline_00010___system___gc_markcog_cogaddr
+_inline___system___gc_markcog__cse__0001
 	res	1
-_inline_00010___system___gc_markcog_heap_base
+_inline___system___gc_markcog_cogaddr
 	res	1
-_inline_00010___system___gc_markcog_heap_end
+_inline___system___gc_markcog_heap_base
 	res	1
-_inline_00010___system___gc_markcog_ptr
+_inline___system___gc_markcog_heap_end
 	res	1
-_inline_00012___system___gc_dofree__cse__0000
+_inline___system___gc_markcog_ptr
 	res	1
-_inline_00012___system___gc_dofree__cse__0002
+_inline___system___gc_markhub_endaddr
 	res	1
-_inline_00012___system___gc_dofree__cse__0003
+_inline___system___gc_markhub_flags
 	res	1
-_inline_00012___system___gc_dofree_heapbase
+_inline___system___gc_markhub_heap_base
 	res	1
-_inline_00012___system___gc_dofree_heapend
+_inline___system___gc_markhub_heap_end
 	res	1
-_inline_00012___system___gc_dofree_nextptr
+_inline___system___gc_markhub_ptr
 	res	1
-_inline_00012___system___gc_dofree_prevptr
+_inline___system___gc_markhub_startaddr
 	res	1
-_inline_00012___system___gc_dofree_ptr
+_inline___system___lockmem_r
 	res	1
-_inline_00014__inline_00000___system____builtin_memmove__idx__0000
+_inline__inline___system____builtin_memmove__idx__0000
 	res	1
-_inline_00014__inline_00000___system____builtin_memmove__idx__0001
+_inline__inline___system____builtin_memmove__idx__0001
 	res	1
 _system___gc_doalloc_tmp001_
 	res	1
