@@ -2,6 +2,7 @@ Version 6.1.3
 - Allowed -I directives in .fpide files
 - Fixed incorrect macro definitions in .fpide files
 - Fixed a number of places where incorrect line numbers were used for errors
+- Reduced register requirements for inlined functions
 
 Version 6.1.2
 - Added files included by FILE directive to .zip files
